[gd_scene load_steps=42 format=3 uid="uid://d33v11fclh5vy"]

[ext_resource type="Script" uid="uid://0gsxspcq2xie" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="FontFile" uid="uid://by8f628mb0ucf" path="res://assets/ui/retganon.ttf" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://but67maan54hd" path="res://assets/sprites/uistuff/eyeroll.png" id="3_bqqt6"]
[ext_resource type="Texture2D" uid="uid://da8ilotw0n3b7" path="res://assets/sprites/uistuff/eyeball.png" id="4_wu84c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0.11372549, 0.16078432, 0.25882354, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.019607844, 0.09019608, 0.23921569, 0.65882355)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
bg_color = Color(0.4509804, 0.09019608, 0.23921569, 1)

[sub_resource type="Theme" id="Theme_bqqt6"]
default_font = ExtResource("2_ekxnf")
Button/colors/font_color = Color(0.4509804, 0.09019608, 0.23921569, 1)
Button/colors/font_focus_color = Color(0.21176471, 0.023529412, 0.09803922, 1)
Button/colors/font_hover_color = Color(0.31757054, 0.05117183, 0.16143104, 1)
Button/colors/font_hover_pressed_color = Color(0.21076381, 0.023102554, 0.0993425, 1)
Button/colors/font_outline_color = Color(0.49439967, 0.46934187, 0.44034812, 1)
Button/colors/font_pressed_color = Color(0.019607844, 0.09019608, 0.23921569, 1)
Button/constants/align_to_largest_stylebox = 1
Button/constants/outline_size = 1
Button/fonts/font = ExtResource("2_ekxnf")
Button/styles/focus = SubResource("StyleBoxEmpty_ekxnf")
Button/styles/hover = SubResource("StyleBoxFlat_bqqt6")
Button/styles/normal = SubResource("StyleBoxFlat_ekxnf")
Button/styles/pressed = SubResource("StyleBoxFlat_wu84c")

[sub_resource type="AtlasTexture" id="AtlasTexture_wu84c"]
atlas = ExtResource("3_bqqt6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ln24"]
atlas = ExtResource("3_bqqt6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtw2f"]
atlas = ExtResource("3_bqqt6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa1go"]
atlas = ExtResource("3_bqqt6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbmy8"]
atlas = ExtResource("3_bqqt6")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk1qb"]
atlas = ExtResource("3_bqqt6")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dd4i"]
atlas = ExtResource("3_bqqt6")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgwnu"]
atlas = ExtResource("3_bqqt6")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_flqon"]
atlas = ExtResource("3_bqqt6")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcqid"]
atlas = ExtResource("3_bqqt6")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_1ajci"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu84c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ln24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtw2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa1go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbmy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk1qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dd4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgwnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flqon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcqid")
}],
"loop": true,
"name": &"eyeroll",
"speed": 11.0
}]

[sub_resource type="Theme" id="Theme_ekxnf"]
default_font = ExtResource("2_ekxnf")
default_font_size = 50

[sub_resource type="AtlasTexture" id="AtlasTexture_1ajci"]
atlas = ExtResource("4_wu84c")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b55j"]
atlas = ExtResource("4_wu84c")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pajh"]
atlas = ExtResource("4_wu84c")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7ex8"]
atlas = ExtResource("4_wu84c")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8gd2"]
atlas = ExtResource("4_wu84c")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hstxw"]
atlas = ExtResource("4_wu84c")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8egab"]
atlas = ExtResource("4_wu84c")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw5y6"]
atlas = ExtResource("4_wu84c")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_svtp6"]
atlas = ExtResource("4_wu84c")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dfpl"]
atlas = ExtResource("4_wu84c")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qywvv"]
atlas = ExtResource("4_wu84c")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wgol"]
atlas = ExtResource("4_wu84c")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1acrt"]
atlas = ExtResource("4_wu84c")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr8o3"]
atlas = ExtResource("4_wu84c")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a85y"]
atlas = ExtResource("4_wu84c")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5e0"]
atlas = ExtResource("4_wu84c")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_engjn"]
atlas = ExtResource("4_wu84c")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h3lr"]
atlas = ExtResource("4_wu84c")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj67d"]
atlas = ExtResource("4_wu84c")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qywvv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ajci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b55j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pajh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7ex8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8gd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hstxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8egab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw5y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svtp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dfpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qywvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wgol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1acrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr8o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a85y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_engjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h3lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj67d")
}],
"loop": true,
"name": &"eyeball",
"speed": 5.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_l6cm7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(9.640335, 6.983504)
color = Color(0, 0, 0.14509805, 0.4862745)

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 131.0
offset_top = 158.0
offset_right = 256.0
offset_bottom = 259.0
theme = SubResource("Theme_bqqt6")

[node name="ContinueButton" type="Button" parent="Menu"]
layout_mode = 2
text = "CONTINUE THIS SHIT"

[node name="StartButton" type="Button" parent="Menu"]
layout_mode = 2
text = "START THIS SHIT"

[node name="CreditsButton" type="Button" parent="Menu"]
layout_mode = 2
text = "CREDITS"
autowrap_mode = 2

[node name="QuitButton" type="Button" parent="Menu"]
layout_mode = 2
text = "QUIT THIS SHIT"

[node name="EyeRoll" type="AnimatedSprite2D" parent="."]
position = Vector2(198, 95)
scale = Vector2(3.4777603, 3.4777603)
sprite_frames = SubResource("SpriteFrames_1ajci")
animation = &"eyeroll"
autoplay = "eyeroll"
frame_progress = 0.5290226

[node name="Title" type="Label" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 31.0
offset_top = 74.0
offset_right = 331.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ekxnf")
theme_override_colors/font_shadow_color = Color(0.4509804, 0.09019608, 0.23921569, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 50
text = "MIRRORFIXER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EyeBall" type="AnimatedSprite2D" parent="."]
position = Vector2(344, 257)
sprite_frames = SubResource("SpriteFrames_qywvv")
animation = &"eyeball"
autoplay = "eyeball"
frame_progress = 0.037425652

[node name="EyeBall3" type="AnimatedSprite2D" parent="."]
position = Vector2(346, 164)
sprite_frames = SubResource("SpriteFrames_qywvv")
animation = &"eyeball"
autoplay = "eyeball"
frame_progress = 0.8397089

[node name="EyeBall5" type="AnimatedSprite2D" parent="."]
position = Vector2(321, 40)
sprite_frames = SubResource("SpriteFrames_qywvv")
animation = &"eyeball"
autoplay = "eyeball"
frame_progress = 0.8397089

[node name="EyeBall2" type="AnimatedSprite2D" parent="."]
position = Vector2(300, 207)
sprite_frames = SubResource("SpriteFrames_qywvv")
animation = &"eyeball"
autoplay = "eyeball"
frame_progress = 0.83524764
flip_h = true

[node name="EyeBall9" type="AnimatedSprite2D" parent="."]
position = Vector2(45, 33)
sprite_frames = SubResource("SpriteFrames_qywvv")
animation = &"eyeball"
autoplay = "eyeball"
frame_progress = 0.83524764

[node name="EyeBall7" type="AnimatedSprite2D" parent="."]
position = Vector2(153, 33)
sprite_frames = SubResource("SpriteFrames_qywvv")
animation = &"eyeball"
autoplay = "eyeball"
frame_progress = 0.83524764
flip_h = true

[node name="EyeBall6" type="AnimatedSprite2D" parent="."]
position = Vector2(231, 27)
sprite_frames = SubResource("SpriteFrames_qywvv")
animation = &"eyeball"
autoplay = "eyeball"
frame_progress = 0.83524764
flip_h = true
flip_v = true

[node name="EyeBall4" type="AnimatedSprite2D" parent="."]
position = Vector2(339, 103)
sprite_frames = SubResource("SpriteFrames_qywvv")
animation = &"eyeball"
autoplay = "eyeball"
frame_progress = 0.83524764
flip_h = true

[node name="EyeBall8" type="AnimatedSprite2D" parent="."]
position = Vector2(95, 62)
sprite_frames = SubResource("SpriteFrames_qywvv")
animation = &"eyeball"
autoplay = "eyeball"
frame_progress = 0.83524764
flip_h = true
flip_v = true

[connection signal="pressed" from="Menu/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Menu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Menu/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_quit_button_pressed"]
